added more code from spring boot phone book

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=htmx-demo
+spring.jackson.default-property-inclusion=non-null
 
 #########################################################################################################################
 # BEGIN NORMAL CONFIGURATION
