--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,8 +19,8 @@
             distribution: 'corretto'
             java-version: 21
 
-        - name: unit tests
-          run: mvn -B test --file pom.xml
+        #- name: unit tests
+         # run: mvn -B test --file pom.xml
 
         - name: build the app
           run: |
