Update main.yml skip Tests in mvn clean package

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,7 @@
         - name: build the app
           run: |
             mvn clean
-            mvn -B package --file pom.xml
+            mvn -B package --file pom.xml -DskipTests=true
         - name: build the docker image
           uses: docker/build-push-action@v4
           with:
