--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.application.name=htmx-demo
 spring.jackson.default-property-inclusion=non-null
+spring.graphql.graphiql.enabled=true
 
 #########################################################################################################################
 # BEGIN NORMAL CONFIGURATION
