--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.4.2</version>
+		<version>3.5.0</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	
@@ -38,6 +38,10 @@
 		<lombok.version>1.18.38</lombok.version>
 		<mapstruct.version>1.6.3</mapstruct.version>
 		<lombok-mapstruct-binding.version>0.2.0</lombok-mapstruct-binding.version>
+		<mysql.connectorj.version>9.3.0</mysql.connectorj.version>
+		<testcontainers.version>1.21.1</testcontainers.version>
+		<mapstruct.spring.version>1.1.3</mapstruct.spring.version>
+		<htmx.version>4.0.1</htmx.version>
 	</properties>
 	
 		<dependencies>
@@ -64,13 +68,13 @@
 		<dependency>
 			<groupId>io.github.wimdeblauwe</groupId>
 			<artifactId>htmx-spring-boot</artifactId>
-			<version>4.0.1</version>
+			<version>${htmx.version}</version>
 		</dependency>
 
 		<dependency>
 			<groupId>com.mysql</groupId>
 			<artifactId>mysql-connector-j</artifactId>
-			<scope>runtime</scope>
+			<version>${mysql.connectorj.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -95,17 +99,19 @@
 		<dependency>
 			<groupId>org.testcontainers</groupId>
 			<artifactId>junit-jupiter</artifactId>
+			<version>${testcontainers.version}</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.testcontainers</groupId>
 			<artifactId>mysql</artifactId>
+			<version>${testcontainers.version}</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
-			<version>1.18.36</version>
+			<version>${lombok.version}</version>
 			<optional>true</optional>
 		</dependency>
 		<dependency>
@@ -122,17 +128,17 @@
 		<dependency>
 			<groupId>org.mapstruct.extensions.spring</groupId>
 			<artifactId>mapstruct-spring-test-extensions</artifactId>
-			<version>1.1.3</version>
+			<version>${mapstruct.spring.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.mapstruct.extensions.spring</groupId>
 			<artifactId>mapstruct-spring-extensions</artifactId>
-			<version>1.1.3</version>
+			<version>${mapstruct.spring.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.mapstruct.extensions.spring</groupId>
 			<artifactId>mapstruct-spring-annotations</artifactId>
-			<version>1.1.3</version>
+			<version>${mapstruct.spring.version}</version>
 		</dependency>
 
 	</dependencies>
