--- a/pom.xml
+++ b/pom.xml
@@ -44,7 +44,7 @@
 		<htmx.version>4.0.1</htmx.version>
 	</properties>
 	
-		<dependencies>
+	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
@@ -114,6 +114,8 @@
 			<version>${lombok.version}</version>
 			<optional>true</optional>
 		</dependency>
+
+		<!-- Mapstruct Libraries -->
 		<dependency>
 			<groupId>org.mapstruct</groupId>
 			<artifactId>mapstruct</artifactId>
